Listen for both DBus service registration events and interface added events

The old method doesn't seem to work anymore with NM 1.44, so the widgets
break when NM is restarted (or simply started late).

This somewhat reverts fa472e6a5e2637a681f61e75cf0988bf847f46ed, but keeps
both methods in-place, and adds some extra sanity checks to make sure we're
not trying to call completely invalid interfaces.

BUG: 471870
FIXED-IN: 5.112