src/secretagent_p.h
@@ -7,6 +7,8 @@
 #ifndef NETWORKMANAGERQT_SECRETAGENT_P_H
 #define NETWORKMANAGERQT_SECRETAGENT_P_H
 
+#include <QDBusServiceWatcher>
+
 #include "agentmanagerinterface.h"
 #include "secretagentadaptor.h"
 
@@ -22,6 +24,7 @@ public:
     virtual ~SecretAgentPrivate();
 private Q_SLOTS:
     void dbusInterfacesAdded(const QDBusObjectPath &path, const QVariantMap &interfaces);
+    void daemonRegistered();
     void registerAgent();
     void registerAgent(const NetworkManager::SecretAgent::Capabilities capabilities);
 
@@ -29,6 +32,7 @@ private:
     SecretAgent *q_ptr;
     SecretAgentAdaptor agent;
     OrgFreedesktopNetworkManagerAgentManagerInterface agentManager;
+    QDBusServiceWatcher watcher;
     QString agentId;
     NetworkManager::SecretAgent::Capabilities capabilities;
 };
